# DTMIF-VRP-Strat

./: .gitignore  LICENSE  README.md  backtest_v2_risk_report.csv  backtest_v3.py  backtest_v3_results.csv  backtest_v3_risk_report.csv  pyproject.toml  requirements.txt  spy_volatility_v2.csv
dtmif/: __init__.py
dtmif/backtest/: __init__.py  __main__.py  config.py  pipeline.py  plotting.py  pnl.py  position_sizing.py  risk.py  signals.py
dtmif/old_versions/v1/: volatility_engine (1).py
dtmif/old_versions/v2/: vol_engine_v2.py
dtmif/vol_engine/: __init__.py  __main__.py  cli.py  combine.py  data.py  garch.py  har.py  realized.py
old_versions/v1/: backtest_risk (1).py
vrp_strat/: __init__.py
vrp_strat/backtest/: __init__.py  __main__.py  pipeline.py  plotting.py  pnl.py  position_sizing.py  risk.py  signals.py
vrp_strat/old_versions/v2/: backtest_v2.py  backtest_v2_results.csv
vrp_strat/vol_engine/: __init__.py  __main__.py  black_scholes.py  cli.py  combine.py  data.py  garch.py  realized.py
