[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dtmif"
version = "0.2.0"
description = "Volatility engine and SPY VRP backtest (v2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "arch>=6.0",
    "scikit-learn>=1.3",
    "yfinance>=0.2.28",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0"]

[project.scripts]
dtmif-backtest = "dtmif.backtest.pipeline:run_backtest"
dtmif-vol-demo = "dtmif.vol_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtmif*"]

[tool.ruff]
line-length = 100
target-version = "py310"
